# kt-bank

./: .gdb_history  .gitignore  C++ Mindmap.drawio  CMakeLists.txt  Prüfzifferberechnung Objektorientiert.docx  README.md  kt-bank_UML_v0_5.drawio  test.txt
Mindmap archive/: C++ Mindmap_v0_1.drawio
src/: Bank.cpp  Bankautomat.cpp  Bankkunde.cpp  Girokarte.cpp  Girokonto.cpp  Karte.cpp  Konto.cpp  Kreditkarte - backupHanno.cpp  Kreditkarte.cpp  Kreditkonto.cpp  main.cpp
src/headers/: Bank.h  Bankautomat.h  Bankkunde.h  Festgeldkonto.h  Girokarte.h  Girokonto.h  Karte.h  Kartenkonto.h  Konto.h  Kreditkarte.h  Kreditkonto.h  Tagesgeldkonto.h
test/: Kreditkarte_test.cpp
